--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -50,6 +50,8 @@
         opacity 0.4s ease,
         transform 0.4s ease;
     z-index: 1000;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .imgs .img:hover::after {
