--- a/src/Cards/ServiceCard/ServiceCard.css
+++ b/src/Cards/ServiceCard/ServiceCard.css
@@ -1,13 +1,29 @@
 .card{
     background-color: var(---color-lightBlue);
     /* max-width: 280px; */
-    width: clamp(250px,30%,300px);
+    width: clamp(200px,25%,250px);
     padding: 10px;
     border-radius: 3px;
     display: flex;
     flex-direction: column;
     gap: 10px;
     align-items: center;
+    animation: appear linear forwards;
+    animation-timeline: view();
+    animation-range: entry 0 cover 25%;
+}
+
+@keyframes appear{
+    from{
+        opacity: 0;
+        clip-path: inset(100% 100% 0 0);
+        scale: 0.5;
+    }
+    to{
+        opacity: 1;
+        clip-path: inset(0 0 0 0);
+        scale: 1;
+    }
 }
 
 .card img{
