--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -19,6 +19,26 @@
     border: 2px solid var(---color-lightBlue);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
+    position: relative;
+
+    /* Animation */
+    animation: left-in  ease-in-out forwards   ;
+    animation-timeline: view();
+    animation-range: entry 0;
+}
+
+@keyframes left-in{
+    from{
+        /* right: -500px; */
+        opacity: 0;
+        transform: translateX(-500px);
+    }
+    to{
+        /* right: 0; */
+        opacity: 1;
+        transform: translateX(0px);
+    }
+
 }
 
 .imgs .img {
@@ -28,7 +48,11 @@
     position: relative;
     cursor: pointer;
     box-shadow: inset 0 0 10px var(---color-secondry);
+    transition: all 0.2s linear;
+}
 
+.imgs .img:hover{
+    transform: scale(1.05);
 }
 
 .imgs .img::after {
@@ -51,12 +75,16 @@
         transform 0.4s ease;
     z-index: 1000;
     max-width: 90vw; /* Responsive width on small devices */
-    white-space: normal; /
+    white-space: normal; 
+    z-index: 9;
+
+    
     /* word-break: break-word;  */
 }
 
 .imgs .img:hover::after {
     content: attr(tooltipText);
+    z-index: 9;
     opacity: 1;
     transform: translateY(0px) scale(1);
 }
@@ -71,6 +99,30 @@
     background-color: var(---color-lightBlue);
     padding: 10px;
     gap: 10px;
+    position: relative;
+    animation: right-in linear forwards;
+    animation-timeline: view();
+    animation-range: entry 0;
+    cursor: pointer;
+    box-shadow: inset 0 0 10px var(---color-secondry);
+}
+
+.texts li{
+    text-shadow: inset 0 0 10px var(---color-secondry);
+}
+
+@keyframes right-in{
+    from{
+        /* right: -500px; */
+        opacity: 0;
+        transform: translateX(200px);
+    }
+    to{
+        /* right: 0; */
+        opacity: 1;
+        transform: translateX(0px);
+
+    }
 }
 
 .texts h2 {
@@ -80,6 +132,13 @@
 .texts li {
     font-size: 1.2rem;
     line-height: 1.5rem;
+}
+
+.texts li span{
+    background-color:var(---color-secondry) ;
+    color: var(---color-lightBlue);
+    padding: 1px 2px;
+    border-radius: 2px;
 }
 
 @media screen  and (max-width:780px){
