--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,6 @@ body::-webkit-scrollbar{
   ---small-gap: 1rem
 }
 
-
 .section {
   /* border: 1px solid red; */
   background-color: white;
@@ -43,6 +42,22 @@ body::-webkit-scrollbar{
 
 p{
     font-size: 1.2rem;
+}
+
+.headings{
+  animation: text-appear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 30vh;
+}
+
+@keyframes text-appear{
+  from{
+    opacity: 0;
+    transform: translateY(100);
+  }to{
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @media screen and (max-width:800px) {
